--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Techie.">
+    <meta name="description" content="Corona Dashboard (Lite)">
     <meta name="author" content="Gokulan Viswanathan">
 	
 	<link rel="icon" type="image/jpg" sizes="16x16" href="./images/corona-title-image.jpg">
