--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 						}
 
 						if (stateDetails["statecode"] === 'KL') {
-							updatedTimeTemplate = stateDetails["lastupdatedtimeKL"] + " IST";
+							updatedTimeTemplate = stateDetails["lastupdatedtime"] + " IST";
 							$( "#updatedTime" ).append(updatedTimeTemplate);
 							
 							valueTemplate = '<td>'+ stateDetails["confirmed"] + '</td>'
