Fix typo errors

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 
 						if (stateDetails["statecode"] === 'KL') {
 							updatedTimeTemplate = stateDetails["lastupdatedtime"] + " IST";
-							$( "#updatedTime" ).append(updatedTimeTemplate);
+							$( "#updatedTimeKL" ).append(updatedTimeTemplate);
 							
 							valueTemplate = '<td>'+ stateDetails["confirmed"] + '</td>'
 							+ '<td>'+ stateDetails["active"] + '</td>'
