--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-EQJ272HHQD"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-7RC5F8T37Z"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
 	  gtag('js', new Date());
 
-	  gtag('config', 'G-EQJ272HHQD');
+	  gtag('config', 'G-7RC5F8T37Z');
 	</script>
 
     <meta charset="UTF-8">
