--- a/state_ap.html
+++ b/state_ap.html
@@ -51,7 +51,7 @@
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 					<br>
-					<button onclick="location.href = './index.html';">Back</button>
+					<button class="next round" onclick="location.href = './index.html';">Back</button>
 					<h3 class="section-heading">Districts of Andhra Pradesh</h3>
 					<!-- <p id="updatedTime" style="font-size: 11px">Last updated on: </p> -->
 					<blockquote>
