--- a/state_tn.html
+++ b/state_tn.html
@@ -61,7 +61,8 @@
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 					<br>
-					<button onclick="location.href = './index.html';">Back</button>
+					<button class="next round" onclick="location.href = './index.html';">Back</button>
+					<!-- <a id="anc" href="./index.html" class="next round">&#8249;</a> -->
 					<h3 class="section-heading">Districts of TamilNadu</h3>
 					<!-- <p id="updatedTime" style="font-size: 11px">Last updated on: </p> -->
 					<blockquote>
