Include delta data (i.e. daily data)

--- a/index.html
+++ b/index.html
@@ -308,10 +308,10 @@
 								updatedTimeTemplate = stateDetails["lastupdatedtime"] + " IST  " + '<img src="./images/live_icon.gif" width="32" height="22" draggable="false"/>';
 								$("#updatedTime").append(updatedTimeTemplate);
 
-								valueTemplate = '<td class="header-confirmed">' + numberWithCommas(stateDetails["confirmed"]) + '</td>'
+								valueTemplate = '<td class="header-confirmed">' + numberWithCommas(stateDetails["confirmed"]) + '<br><img src="./images/triangle.png" width="10" height="10" draggable="false"/>&nbsp;<span class="delta">' + numberWithCommas(stateDetails["deltaconfirmed"]) + '</span></td>'
 									+ '<td class="header-active">' + numberWithCommas(stateDetails["active"]) + '</td>'
-									+ '<td class="header-recovered">' + numberWithCommas(stateDetails["recovered"]) + '</td>'
-									+ '<td class="header-dead">' + numberWithCommas(stateDetails["deaths"]) + '</td>';
+									+ '<td class="header-recovered">' + numberWithCommas(stateDetails["recovered"]) + '<br><img src="./images/triangle.png" width="10" height="10" draggable="false"/>&nbsp;<span class="delta">' + numberWithCommas(stateDetails["deltarecovered"]) + '</span></td>'
+									+ '<td class="header-dead">' + numberWithCommas(stateDetails["deaths"]) + '<br><img src="./images/triangle.png" width="10" height="10" draggable="false"/>&nbsp;<span class="delta">' + numberWithCommas(stateDetails["deltadeaths"]) + '</span></td>';
 								$("#covidValue").append(valueTemplate);
 							}
 
@@ -319,10 +319,10 @@
 								updatedTimeTemplate = stateDetails["lastupdatedtime"] + " IST  " + '<img src="./images/live_icon.gif" width="32" height="22" draggable="false"/>';
 								$("#updatedTimeKL").append(updatedTimeTemplate);
 
-								valueTemplate = '<td class="header-confirmed">' + numberWithCommas(stateDetails["confirmed"]) + '</td>'
+								valueTemplate = '<td class="header-confirmed">' + numberWithCommas(stateDetails["confirmed"]) + '<br><img src="./images/triangle.png" width="10" height="10" draggable="false"/>&nbsp;<span class="delta">' + numberWithCommas(stateDetails["deltaconfirmed"]) + '</span></td>'
 									+ '<td class="header-active">' + numberWithCommas(stateDetails["active"]) + '</td>'
-									+ '<td class="header-recovered">' + numberWithCommas(stateDetails["recovered"]) + '</td>'
-									+ '<td class="header-dead">' + numberWithCommas(stateDetails["deaths"]) + '</td>';
+									+ '<td class="header-recovered">' + numberWithCommas(stateDetails["recovered"]) + '<br><img src="./images/triangle.png" width="10" height="10" draggable="false"/>&nbsp;<span class="delta">' + numberWithCommas(stateDetails["deltarecovered"]) + '</span></td>'
+									+ '<td class="header-dead">' + numberWithCommas(stateDetails["deaths"]) + '<br><img src="./images/triangle.png" width="10" height="10" draggable="false"/>&nbsp;<span class="delta">' + numberWithCommas(stateDetails["deltadeaths"]) + '</span></td>';
 								$("#covidValueKL").append(valueTemplate);
 							}
 
@@ -330,10 +330,10 @@
 								updatedTimeTemplate = stateDetails["lastupdatedtime"] + " IST  " + '<img src="./images/live_icon.gif" width="32" height="22" draggable="false"/>';
 								$("#updatedTimeTN").append(updatedTimeTemplate);
 
-								valueTemplate = '<td class="header-confirmed">' + numberWithCommas(stateDetails["confirmed"]) + '</td>'
+								valueTemplate = '<td class="header-confirmed">' + numberWithCommas(stateDetails["confirmed"]) + '<br><img src="./images/triangle.png" width="10" height="10" draggable="false"/>&nbsp;<span class="delta">' + numberWithCommas(stateDetails["deltaconfirmed"]) + '</span></td>'
 									+ '<td class="header-active">' + numberWithCommas(stateDetails["active"]) + '</td>'
-									+ '<td class="header-recovered">' + numberWithCommas(stateDetails["recovered"]) + '</td>'
-									+ '<td class="header-dead">' + numberWithCommas(stateDetails["deaths"]) + '</td>';
+									+ '<td class="header-recovered">' + numberWithCommas(stateDetails["recovered"]) + '<br><img src="./images/triangle.png" width="10" height="10" draggable="false"/>&nbsp;<span class="delta">' + numberWithCommas(stateDetails["deltarecovered"]) + '</span></td>'
+									+ '<td class="header-dead">' + numberWithCommas(stateDetails["deaths"]) + '<br><img src="./images/triangle.png" width="10" height="10" draggable="false"/>&nbsp;<span class="delta">' + numberWithCommas(stateDetails["deltadeaths"]) + '</span></td>';
 								$("#covidValueTN").append(valueTemplate);
 							}
 
@@ -341,10 +341,10 @@
 								updatedTimeTemplate = stateDetails["lastupdatedtime"] + " IST  " + '<img src="./images/live_icon.gif" width="32" height="22" draggable="false"/>';
 								$("#updatedTimeKA").append(updatedTimeTemplate);
 
-								valueTemplate = '<td class="header-confirmed">' + numberWithCommas(stateDetails["confirmed"]) + '</td>'
+								valueTemplate = '<td class="header-confirmed">' + numberWithCommas(stateDetails["confirmed"]) + '<br><img src="./images/triangle.png" width="10" height="10" draggable="false"/>&nbsp;<span class="delta">' + numberWithCommas(stateDetails["deltaconfirmed"]) + '</span></td>'
 									+ '<td class="header-active">' + numberWithCommas(stateDetails["active"]) + '</td>'
-									+ '<td class="header-recovered">' + numberWithCommas(stateDetails["recovered"]) + '</td>'
-									+ '<td class="header-dead">' + numberWithCommas(stateDetails["deaths"]) + '</td>';
+									+ '<td class="header-recovered">' + numberWithCommas(stateDetails["recovered"]) + '<br><img src="./images/triangle.png" width="10" height="10" draggable="false"/>&nbsp;<span class="delta">' + numberWithCommas(stateDetails["deltarecovered"]) + '</span></td>'
+									+ '<td class="header-dead">' + numberWithCommas(stateDetails["deaths"]) + '<br><img src="./images/triangle.png" width="10" height="10" draggable="false"/>&nbsp;<span class="delta">' + numberWithCommas(stateDetails["deltadeaths"]) + '</span></td>';
 								$("#covidValueKA").append(valueTemplate);
 							}
 
@@ -352,10 +352,10 @@
 								updatedTimeTemplate = stateDetails["lastupdatedtime"] + " IST  " + '<img src="./images/live_icon.gif" width="32" height="22" draggable="false"/>';
 								$("#updatedTimeAP").append(updatedTimeTemplate);
 
-								valueTemplate = '<td class="header-confirmed">' + numberWithCommas(stateDetails["confirmed"]) + '</td>'
+								valueTemplate = '<td class="header-confirmed">' + numberWithCommas(stateDetails["confirmed"]) + '<br><img src="./images/triangle.png" width="10" height="10" draggable="false"/>&nbsp;<span class="delta">' + numberWithCommas(stateDetails["deltaconfirmed"]) + '</span></td>'
 									+ '<td class="header-active">' + numberWithCommas(stateDetails["active"]) + '</td>'
-									+ '<td class="header-recovered">' + numberWithCommas(stateDetails["recovered"]) + '</td>'
-									+ '<td class="header-dead">' + numberWithCommas(stateDetails["deaths"]) + '</td>';
+									+ '<td class="header-recovered">' + numberWithCommas(stateDetails["recovered"]) + '<br><img src="./images/triangle.png" width="10" height="10" draggable="false"/>&nbsp;<span class="delta">' + numberWithCommas(stateDetails["deltarecovered"]) + '</span></td>'
+									+ '<td class="header-dead">' + numberWithCommas(stateDetails["deaths"]) + '<br><img src="./images/triangle.png" width="10" height="10" draggable="false"/>&nbsp;<span class="delta">' + numberWithCommas(stateDetails["deltadeaths"]) + '</span></td>';
 								$("#covidValueAP").append(valueTemplate);
 							}
 
@@ -363,10 +363,10 @@
 								updatedTimeTemplate = stateDetails["lastupdatedtime"] + " IST  " + '<img src="./images/live_icon.gif" width="32" height="22" draggable="false"/>';
 								$("#updatedTimeTG").append(updatedTimeTemplate);
 
-								valueTemplate = '<td class="header-confirmed">' + numberWithCommas(stateDetails["confirmed"]) + '</td>'
+								valueTemplate = '<td class="header-confirmed">' + numberWithCommas(stateDetails["confirmed"]) + '<br><img src="./images/triangle.png" width="10" height="10" draggable="false"/>&nbsp;<span class="delta">' + numberWithCommas(stateDetails["deltaconfirmed"]) + '</span></td>'
 									+ '<td class="header-active">' + numberWithCommas(stateDetails["active"]) + '</td>'
-									+ '<td class="header-recovered">' + numberWithCommas(stateDetails["recovered"]) + '</td>'
-									+ '<td class="header-dead">' + numberWithCommas(stateDetails["deaths"]) + '</td>';
+									+ '<td class="header-recovered">' + numberWithCommas(stateDetails["recovered"]) + '<br><img src="./images/triangle.png" width="10" height="10" draggable="false"/>&nbsp;<span class="delta">' + numberWithCommas(stateDetails["deltarecovered"]) + '</span></td>'
+									+ '<td class="header-dead">' + numberWithCommas(stateDetails["deaths"]) + '<br><img src="./images/triangle.png" width="10" height="10" draggable="false"/>&nbsp;<span class="delta">' + numberWithCommas(stateDetails["deltadeaths"]) + '</span></td>';
 								$("#covidValueTG").append(valueTemplate);
 							}
 						}
