Modify 'Useful links' and include it as heading

--- a/index.html
+++ b/index.html
@@ -223,22 +223,26 @@
 							</center>
 						</blockquote>
 					</div>
+					
+					<div class="states-box">
+						<h3 class="section-heading" style="padding-left: 5px">Useful Links</h3>
+						<blockquote>
+							<ul>
+								<li>
+									Covid'19 +ve cases across the Globe : <a style="font-size: 16px" href="https://www.worldometers.info/coronavirus/" target="_blank"><span class="click-here-href">Click here<sup><img src="./images/new-window.png" width="28" height="22" draggable="false"/></sup></span></a>
+								</li>
+
+								<li>
+									Ministry of Home Affairs Guidelines : <a style="font-size: 11px" href="https://www.mha.gov.in/notifications/circulars-covid-19"
+									target="_blank"><span class="click-here-href">Click here<sup><img src="./images/new-window.png" width="28" height="22" draggable="false"/></sup></span></a>
+								</li>
+							</ul>
+						</blockquote>
+					</div>
 				</div>
 			</div>
 		</div>
 	</article>
-
-	<center>
-		<div id="gitrepo">
-			<a style="font-size: 11px" href="https://www.worldometers.info/coronavirus/" target="_blank">Click here to
-				view the global statistics</a>
-		</div>
-
-		<div id="gitrepo">
-			<a style="font-size: 11px" href="https://www.mha.gov.in/notifications/circulars-covid-19"
-				target="_blank">Click here to view the circular published by MHA department</a>
-		</div>
-	</center>
 
 	<hr>
 
