Update 'Useful links' heading contents

--- a/index.html
+++ b/index.html
@@ -229,11 +229,16 @@
 						<blockquote>
 							<ul>
 								<li>
-									Covid'19 +ve cases across the Globe : <a style="font-size: 16px" href="https://www.worldometers.info/coronavirus/" target="_blank"><span class="click-here-href">Click here<sup><img src="./images/new-window.png" width="28" height="22" draggable="false"/></sup></span></a>
+									Covid'19 across Globe: <a style="font-size: 16px" href="https://www.worldometers.info/coronavirus/" target="_blank"><span class="click-here-href">Click here<sup><img src="./images/new-window.png" width="28" height="22" draggable="false"/></sup></span></a>
 								</li>
-
+								
 								<li>
-									Ministry of Home Affairs Guidelines : <a style="font-size: 11px" href="https://www.mha.gov.in/notifications/circulars-covid-19"
+									Government Guidelines: <a style="font-size: 11px" href="https://www.mha.gov.in/notifications/circulars-covid-19"
+									target="_blank"><span class="click-here-href">Click here<sup><img src="./images/new-window.png" width="28" height="22" draggable="false"/></sup></span></a>
+								</li>
+								
+								<li>
+									ICMR Testing Methods: <a style="font-size: 11px" href="https://www.icmr.gov.in/cteststrat.html"
 									target="_blank"><span class="click-here-href">Click here<sup><img src="./images/new-window.png" width="28" height="22" draggable="false"/></sup></span></a>
 								</li>
 							</ul>
