--- a/index.html
+++ b/index.html
@@ -251,6 +251,9 @@
 									target="_blank"><span class="click-here-href">Click here<sup><img src="./images/new-window.png" width="28" height="22" draggable="false"/></sup></span></a>
 								</li>
 							</ul>
+							<center>
+								<img src="./images/india-outline.png" width="228" height="222" draggable="false"/>
+							</center>
 						</blockquote>
 					</div>
 </div>
