--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 								</li>
 							</ul>
 							<center>
-								<img src="./images/india-outline.png" width="228" height="222" draggable="false"/>
+								<img src="./images/india-outline.png" width="228" height="222" draggable="false"/><!-- -->
 							</center>
 						</blockquote>
 					</div>
