Update Footer and its content

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 							<table class="table table-hover">
 								<thead class="covidHeading">
 									<tr>
-										<th class="table-header-center header-confirmed">Confirmed</th>
-										<th class="table-header-center header-active">Active</th>
-										<th class="table-header-center header-recovered">Recovered</th>
-										<th class="table-header-center header-dead">Deceased</th>
+										<th class="table-header-right header-confirmed">Confirmed</th>
+										<th class="table-header-right header-active">Active</th>
+										<th class="table-header-right header-recovered">Recovered</th>
+										<th class="table-header-right header-dead">Deceased</th>
 									</tr>
 								</thead>
 								<tbody>
@@ -90,10 +90,10 @@
 							<table class="table table-hover">
 								<thead class="covidHeadingKL">
 									<tr>
-										<th class="table-header-center header-confirmed">Confirmed</th>
-										<th class="table-header-center header-active">Active</th>
-										<th class="table-header-center header-recovered">Recovered</th>
-										<th class="table-header-center header-dead">Deceased</th>
+										<th class="table-header-right header-confirmed">Confirmed</th>
+										<th class="table-header-right header-active">Active</th>
+										<th class="table-header-right header-recovered">Recovered</th>
+										<th class="table-header-right header-dead">Deceased</th>
 									</tr>
 								</thead>
 								<tbody>
@@ -119,10 +119,10 @@
 							<table class="table table-hover">
 								<thead class="covidHeadingTN">
 									<tr>
-										<th class="table-header-center header-confirmed">Confirmed</th>
-										<th class="table-header-center header-active">Active</th>
-										<th class="table-header-center header-recovered">Recovered</th>
-										<th class="table-header-center header-dead">Deceased</th>
+										<th class="table-header-right header-confirmed">Confirmed</th>
+										<th class="table-header-right header-active">Active</th>
+										<th class="table-header-right header-recovered">Recovered</th>
+										<th class="table-header-right header-dead">Deceased</th>
 									</tr>
 								</thead>
 								<tbody>
@@ -149,10 +149,10 @@
 							<table class="table table-hover">
 								<thead class="covidHeadingKA">
 									<tr>
-										<th class="table-header-center header-confirmed">Confirmed</th>
-										<th class="table-header-center header-active">Active</th>
-										<th class="table-header-center header-recovered">Recovered</th>
-										<th class="table-header-center header-dead">Deceased</th>
+										<th class="table-header-right header-confirmed">Confirmed</th>
+										<th class="table-header-right header-active">Active</th>
+										<th class="table-header-right header-recovered">Recovered</th>
+										<th class="table-header-right header-dead">Deceased</th>
 									</tr>
 								</thead>
 								<tbody>
@@ -179,10 +179,10 @@
 							<table class="table table-hover">
 								<thead class="covidHeadingAP">
 									<tr>
-										<th class="table-header-center header-confirmed">Confirmed</th>
-										<th class="table-header-center header-active">Active</th>
-										<th class="table-header-center header-recovered">Recovered</th>
-										<th class="table-header-center header-dead">Deceased</th>
+										<th class="table-header-right header-confirmed">Confirmed</th>
+										<th class="table-header-right header-active">Active</th>
+										<th class="table-header-right header-recovered">Recovered</th>
+										<th class="table-header-right header-dead">Deceased</th>
 									</tr>
 								</thead>
 								<tbody>
@@ -210,10 +210,10 @@
 							<table class="table table-hover">
 								<thead class="covidHeadingTG">
 									<tr>
-										<th class="table-header-center header-confirmed">Confirmed</th>
-										<th class="table-header-center header-active">Active</th>
-										<th class="table-header-center header-recovered">Recovered</th>
-										<th class="table-header-center header-dead">Deceased</th>
+										<th class="table-header-right header-confirmed">Confirmed</th>
+										<th class="table-header-right header-active">Active</th>
+										<th class="table-header-right header-recovered">Recovered</th>
+										<th class="table-header-right header-dead">Deceased</th>
 									</tr>
 								</thead>
 								<tbody>
@@ -361,8 +361,8 @@
 	<nav class="navbar navbar-inverse navbar-fixed-bottom">
 	<div class="icon-bar">
 		<center>
-	  <a class="active" data-toggle="tooltip" title="Facebook" href="https://facebook.com/gokulan90"
-								target="_blank" class="social"><img src="images/icon-facebook.png" width="36"
+			<a class="active" data-toggle="tooltip" title="My Gov Covid'19" href="https://www.mygov.in/covid-19/"
+								target="_blank" class="social"><img href src="images/govt.svg" width="36"
 									height="36" draggable="false"></a>
 		</center>
 	</div>
