--- a/state_kl.html
+++ b/state_kl.html
@@ -27,6 +27,13 @@
 </head>
 
 <body>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="./index.html">Covid'19 +ve cases</a>
+    </div>
+</div>
+</nav>
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
@@ -75,38 +82,6 @@
 			</div>
 		</div>
 	</article>
-
-	<center>
-		<div id="gitrepo">
-			<a style="font-size: 11px" href="https://www.worldometers.info/coronavirus/" target="_blank">Click here to view the global statistics</a> 
-		</div>
-		
-		<div id="gitrepo">
-			<a style="font-size: 11px" href="https://www.mha.gov.in/notifications/circulars-covid-19" target="_blank">Click here to view the circular published by MHA department</a> 
-		</div>
-	</center>
-	
-	<hr>
-	
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <ul class="list-inline text-center">
-                        <center>
-                            <li>
-                                <a data-toggle="tooltip" title="Facebook" href="https://facebook.com/gokulan90" target="_blank" class="social"><img src="images/icon-facebook.png" width="36" height="36" draggable="false"></a>
-							</li>
-							<p></p>
-							<p style="font-size:9px">Disclaimer: This page is best viewed in Google Chrome desktop browser with a zoom level at 100%</p>
-                        </center>
-                    </ul>
-                </div>
-            </div>
-		</div>
-		
-	</footer>
 	
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
@@ -143,11 +118,11 @@
 					
 					for (var eachDistrict in districtDetails) {
 						var entry = districtDetails[eachDistrict];
-						valueTemplate = '<tr><td>'+ eachDistrict + '</td>'
-						+ '<td>'+ entry["confirmed"] + '</td>'
-						+ '<td>'+ entry["active"] + '</td>'
-						+ '<td>'+ entry["recovered"] + '</td>'
-						+ '<td>'+ entry["deceased"] + '</td></tr>';
+						valueTemplate = '<tr><td class="district-td">'+ eachDistrict + '</td>'
+						+ '<td class="district-td">'+ entry["confirmed"] + '</td>'
+						+ '<td class="district-td">'+ entry["active"] + '</td>'
+						+ '<td class="district-td">'+ entry["recovered"] + '</td>'
+						+ '<td class="district-td">'+ entry["deceased"] + '</td></tr>';
 						$( "#covidValue" ).append(valueTemplate);
 					}
 				
@@ -159,7 +134,15 @@
     }
     callCovidStateApi();
     </script>
-
+<nav class="navbar navbar-inverse navbar-fixed-bottom">
+	<div class="icon-bar">
+		<center>
+			<a class="active" data-toggle="tooltip" title="My Gov Covid'19" href="https://www.mygov.in/covid-19/"
+								target="_blank" class="social"><img href src="images/govt.svg" width="36"
+									height="36" draggable="false"></a>
+		</center>
+	</div>
+	</nav>
 </body>
 
 </html>
