--- a/state_tn.html
+++ b/state_tn.html
@@ -38,6 +38,14 @@
 
 <body>
 
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="./index.html">Covid'19 +ve cases</a>
+    </div>
+</div>
+</nav>
+
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
     <!-- <header class="intro-header" style="background-image: url('images/simple-background-grey.png')">
@@ -61,7 +69,7 @@
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 					<br>
-					<button class="next round" onclick="location.href = './index.html';">Back</button>
+					<button class="next round" onclick="location.href = './index.html';">Home</button>
 					<!-- <a id="anc" href="./index.html" class="next round">&#8249;</a> -->
 					<h3 class="section-heading">Districts of TamilNadu</h3>
 					<!-- <p id="updatedTime" style="font-size: 11px">Last updated on: </p> -->
@@ -77,8 +85,6 @@
 					</tr>
 					</thead>
 					<tbody class="covidValue" id="covidValue">
-					<!-- <tr class="covidValue" id="covidValue">
-					</tr> -->
 					</tbody>
 					</table>
 					</blockquote>
@@ -86,38 +92,7 @@
 			</div>
 		</div>
 	</article>
-
-	<center>
-		<div id="gitrepo">
-			<a style="font-size: 11px" href="https://www.worldometers.info/coronavirus/" target="_blank">Click here to view the global statistics</a> 
-		</div>
-		
-		<div id="gitrepo">
-			<a style="font-size: 11px" href="https://www.mha.gov.in/notifications/circulars-covid-19" target="_blank">Click here to view the circular published by MHA department</a> 
-		</div>
-	</center>
 	
-	<hr>
-	
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <ul class="list-inline text-center">
-                        <center>
-                            <li>
-                                <a data-toggle="tooltip" title="Facebook" href="https://facebook.com/gokulan90" target="_blank" class="social"><img src="images/icon-facebook.png" width="36" height="36" draggable="false"></a>
-							</li>
-							<p></p>
-							<p style="font-size:9px">Disclaimer: This page is best viewed in Google Chrome desktop browser with a zoom level at 100%</p>
-                        </center>
-                    </ul>
-                </div>
-            </div>
-		</div>
-		
-	</footer>
 	
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
@@ -154,8 +129,8 @@
 					
 					for (var eachDistrict in districtDetails) {
 						var entry = districtDetails[eachDistrict];
-						valueTemplate = '<tr><td>'+ eachDistrict + '</td>'
-						+ '<td>'+ entry["confirmed"] + '</td>';
+						valueTemplate = '<tr><td class="district-td">'+ eachDistrict + '</td>'
+						+ '<td class="district-td">'+ entry["confirmed"] + '</td>';
 						//+ '<td>'+ entry["active"] + '</td>'
 						//+ '<td>'+ entry["recovered"] + '</td>'
 						//+ '<td>'+ entry["deceased"] + '</td></tr>';
@@ -170,7 +145,15 @@
     }
     callCovidStateApi();
     </script>
-
+<nav class="navbar navbar-inverse navbar-fixed-bottom">
+	<div class="icon-bar">
+		<center>
+			<a class="active" data-toggle="tooltip" title="My Gov Covid'19" href="https://www.mygov.in/covid-19/"
+								target="_blank" class="social"><img href src="images/govt.svg" width="36"
+									height="36" draggable="false"></a>
+		</center>
+	</div>
+	</nav>
 </body>
 
 </html>
