Update Footer pane

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
       <nav class="navbar navbar-inverse navbar-fixed-bottom">
          <div class="icon-bar">
             <center>
-               <a class="active" data-toggle="tooltip" title="My Gov Covid'19" href="https://www.mygov.in/covid-19/"
+               <a class="active" href="https://www.mygov.in/covid-19/"
                   target="_blank" class="social"><img href src="images/govt.svg" width="36"
                   height="36" draggable="false"></a>
             </center>
