Update recovery & mortality rates

--- a/index.html
+++ b/index.html
@@ -68,16 +68,14 @@
                   </tbody>
                </table>
                <center>
-                  <div class="btn-group">
+			   <div class="flex-container">
+                  <div class="btn-group-vertical">
                      <button type="button" class="btn btn-primary" style="background-color: #28a745" id="rRate">Recovery rate </button>
                      <button type="button" class="btn btn-primary" style="background-color: #6c757d" id="mRate">Mortality rate </button>
                   </div>
+			   </div>
                </center>
                <script>
-                  $(document).ready(function(){
-                  $('[data-toggle="tooltip"]').tooltip();   
-                  });
-                  
                   $(document).ready(function(){
                   $('[data-toggle="tooltip"]').tooltip();   
                   });
