--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div id="section1" class="container-fluid">
          <h1>India</h1>
          <div class="states-box">
-            <p id="updatedTime" style="font-size: 12px"></p>
+            <p id="updatedTime" style="font-size: 13px"></p>
             <blockquote>
                <table class="table table-hover">
                   <thead class="covidHeading">
@@ -89,7 +89,7 @@
          Kerala
          <h2>
          <div class="states-box">
-            <p id="updatedTimeKL" style="font-size: 12px;padding-left: 5px"></p>
+            <p id="updatedTimeKL" style="font-size: 13px"></p>
             <blockquote>
                <table class="table table-hover">
                   <thead class="covidHeadingKL">
@@ -117,7 +117,7 @@
       <div id="section3" class="container-fluid">
          <h2>TamilNadu</h2>
          <div class="states-box">
-            <p id="updatedTimeTN" style="font-size: 12px;padding-left: 5px"></p>
+            <p id="updatedTimeTN" style="font-size: 13px"></p>
             <blockquote>
                <table class="table table-hover">
                   <thead class="covidHeadingTN">
@@ -145,7 +145,7 @@
       <div id="section4" class="container-fluid">
          <h2>Karnataka</h2>
          <div class="states-box">
-            <p id="updatedTimeKA" style="font-size: 12px;padding-left: 5px"></p>
+            <p id="updatedTimeKA" style="font-size: 13px"></p>
             <blockquote>
                <table class="table table-hover">
                   <thead class="covidHeadingKA">
@@ -173,7 +173,7 @@
       <div id="section5" class="container-fluid">
          <h2>Andhra Pradesh</h2>
          <div class="states-box">
-            <p id="updatedTimeAP" style="font-size: 12px;padding-left: 5px"></p>
+            <p id="updatedTimeAP" style="font-size: 13px"></p>
             <blockquote>
                <table class="table table-hover">
                   <thead class="covidHeadingAP">
@@ -201,7 +201,7 @@
       <div id="section6" class="container-fluid">
          <h2>Telangana</h2>
          <div class="states-box">
-            <p id="updatedTimeTG" style="font-size: 12px;padding-left: 5px"></p>
+            <p id="updatedTimeTG" style="font-size: 13px"></p>
             <blockquote>
                <table class="table table-hover">
                   <thead class="covidHeadingTG">
