--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <link rel="icon" type="image/jpg" sizes="16x16" href="./images/corona-title-image.jpg">
       <title>Covid'19 India</title>
       <meta charset="utf-8">
+	  <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="./script/bootstrap.min.css">
       <link  rel="stylesheet" href="./styles/custom-style.css">
@@ -61,6 +62,11 @@
                <h4>Cases Tested</h4>
                <h2 id="cases-tested-in" class="cases-tested-in"></h2>
                <h4 id="cases-time-in" class="cases-time-in">As on </h4>
+			   <br/>
+			   <br/>
+			   <center>
+			<a href="https://docs.google.com/forms/d/e/1FAIpQLSfi1JugttiwxAT5chK29XsN4Y27nJh6GtC6-5htdjGQcycnJA/viewform?vc=0&c=0&w=1">Leave feedback...</a>
+			</center>
             </div>
          </div>
       </div>
