Update typo error

--- a/state_tn.html
+++ b/state_tn.html
@@ -58,7 +58,7 @@
                   <div class="flex-container rate-box">
                      <div class="btn-group-vertical">
                         <button type="button" class="btn btn-primary" style="background-color: #28a745" id="rRateTN">Recovery rate </button>
-                        <button type="button" class="btn btn-primary" style="background-color: #6c757d" id="mRateTn">Mortality rate </button>
+                        <button type="button" class="btn btn-primary" style="background-color: #6c757d" id="mRateTN">Mortality rate </button>
                      </div>
                   </div>
                </center>
