Temporarily comment out cases tested section

--- a/index.html
+++ b/index.html
@@ -59,20 +59,20 @@
                </center>
             </blockquote>
             <div class="jumbotron jum">
-               <h4>Cases Tested</h4>
+               <!-- <h4>Cases Tested</h4>
                <h2 id="cases-tested-in" class="cases-tested-in"></h2>
                <h4 id="cases-time-in" class="cases-time-in">As on </h4>
 			   <br/>
 			   <br/>
 			   <center>
 			<a href="https://docs.google.com/forms/d/e/1FAIpQLSfi1JugttiwxAT5chK29XsN4Y27nJh6GtC6-5htdjGQcycnJA/viewform?vc=0&c=0&w=1">Leave feedback...</a>
-			</center>
+			</center> -->
             </div>
          </div>
       </div>
       <script>
          callCovidApi('TT', '#updatedTime', '#table-body', '#rRate', '#mRate');
-         getCasesTestedCount();
+         //getCasesTestedCount();
       </script>
       <!-- Footer menu -->
       <nav class="navbar navbar-inverse navbar-fixed-bottom">
