Add pages for recovery & mortality rates

--- a/state_ap.html
+++ b/state_ap.html
@@ -33,7 +33,11 @@
       <nav class="navbar navbar-inverse navbar-fixed-top">
          <div class="container-fluid">
             <div class="navbar-header header-prop">
-               <a class="navbar-brand" href="./index.html">Covid'19 +ve cases</a>
+               <div class="btn-group btn-group-justified ">
+                  <a href="./index.html" class="btn btn-secondary header-button">Covid'19<br>India</a>
+                  <a href="./recovery.html" class="btn btn-secondary header-button">Recovery<br>Rate</a>
+                  <a href="./mortality.html" class="btn btn-secondary header-button">Mortality<br>Rate</a>
+               </div>
             </div>
          </div>
       </nav>
