--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
       <nav class="navbar navbar-inverse navbar-fixed-top">
          <div class="container-fluid">
             <div class="navbar-header header-prop">
-               <a class="navbar-brand" href="./index.html">Covid'19 +ve cases</a>
+               <div class="btn-group btn-group-justified ">
+                  <a href="./index.html" class="btn active active-header-button">Covid'19<br>India</a>
+                  <a href="./recovery.html" class="btn btn-secondary header-button">Recovery<br>Rate</a>
+                  <a href="./mortality.html" class="btn btn-secondary header-button">Mortality<br>Rate</a>
+               </div>
             </div>
          </div>
       </nav>
@@ -59,20 +63,21 @@
                </center>
             </blockquote>
             <div class="jumbotron jum">
-               <!-- <h4>Cases Tested</h4>
+               <h4>Cases Tested</h4>
+			   <!-- https://www.icmr.gov.in/pdf/covid/update/ICMR_testing_update_18May2020_9AM_IST.pdf -->
                <h2 id="cases-tested-in" class="cases-tested-in"></h2>
-               <h4 id="cases-time-in" class="cases-time-in">As on </h4>
+               <h4 id="cases-time-in" class="cases-time-in">as on </h4>
 			   <br/>
 			   <br/>
 			   <center>
 			<a href="https://docs.google.com/forms/d/e/1FAIpQLSfi1JugttiwxAT5chK29XsN4Y27nJh6GtC6-5htdjGQcycnJA/viewform?vc=0&c=0&w=1">Leave feedback...</a>
-			</center> -->
+			</center>
             </div>
          </div>
       </div>
       <script>
          callCovidApi('TT', '#updatedTime', '#table-body', '#rRate', '#mRate');
-         //getCasesTestedCount();
+         getCasesTestedCount('#cases-tested-in');
       </script>
       <!-- Footer menu -->
       <nav class="navbar navbar-inverse navbar-fixed-bottom">
