--- a/recovery.html
+++ b/recovery.html
@@ -18,10 +18,11 @@
       <meta name="author" content="Gokulan Viswanathan">
       <link rel="icon" type="image/jpg" sizes="16x16" href="./images/corona-title-image.jpg">
       <title>Covid'19 Statistics</title>
+      <!-- Bootstrap Core CSS -->
       
       <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
       <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-      <link rel="stylesheet" href="./script/bootstrap.min.css">
+	  <link rel="stylesheet" href="./script/bootstrap.min.css">
       <link  rel="stylesheet" href="./styles/custom-style.css">
       <script src="./script/jquery.min.js"></script>
       <script src="./script/bootstrap.min.js"></script>
@@ -34,7 +35,7 @@
             <div class="navbar-header header-prop">
                <div class="btn-group btn-group-justified ">
                   <a href="./index.html" class="btn btn-secondary header-button">Covid'19<br>India</a>
-                  <a href="./recovery.html" class="btn btn-secondary header-button">Recovery<br>Rate</a>
+                  <a href="./recovery.html" class="btn active active-header-button">Recovery<br>Rate</a>
                   <a href="./mortality.html" class="btn btn-secondary header-button">Mortality<br>Rate</a>
                </div>
             </div>
@@ -42,49 +43,37 @@
       </nav>
 	  
       <div id="section1" class="container-fluid main-class">
-         <h2>Kerala</h2>
+         <h2>Recovery Rate</h2>
          <div class="value-box">
-            <p id="updatedTimeKL" style="font-size: 13px"></p>
+            <p id="updatedTime" style="font-size: 13px"></p>
             <blockquote>
-               <table class="table table-hover">
-                  <thead class="table-heading">
-                     <tr>
-                        <th class="table-header-right header-confirmed">Confirmed</th>
-                        <th class="table-header-right header-active">Active</th>
-                        <th class="table-header-right header-recovered">Recovered</th>
-                        <th class="table-header-right header-dead">Deceased</th>
-                     </tr>
-                  </thead>
-                  <tbody class="table-body-kl" id="table-body-kl">
-                  </tbody>
-               </table>
                <center>
                   <div class="flex-container rate-box">
                      <div class="btn-group-vertical">
-                        <button type="button" class="btn btn-primary" style="background-color: #28a745" id="rRateKL">Recovery rate </button>
-                        <button type="button" class="btn btn-primary" style="background-color: #6c757d" id="mRateKL">Mortality rate </button>
+                        <button type="button" class="btn btn-primary" style="background-color: #28a745" id="rRate">Overall<br/>Recovery rate </button>
                      </div>
                   </div>
                </center>
             </blockquote>
-            <h3 class="section-heading">Districts</h3>
+            <h3 class="section-heading">States</h3>
             <blockquote>
                <table class="table table-hover">
                   <thead class="covidHeading">
                      <tr>
-                        <th class="table-header">District</th>
-                        <th class="table-header-center">Confirmed</th>
+                        <th class="table-header">State</th>
+                        <th class="table-header-recovery">Recovery %</th>
+						<th class="table-header-right header-last-upd">Last Updated</th>
                      </tr>
                   </thead>
-                  <tbody class="table-body-kl-dt" id="table-body-kl-dt">
+                  <tbody class="table-body-reco" id="table-body-reco">
                   </tbody>
                </table>
             </blockquote>
          </div>
       </div>
       <script>
-         callCovidApi('KL', '#updatedTimeKL', '#table-body-kl', '#rRateKL', '#mRateKL');
-         callCovidStateApi('Kerala', '#table-body-kl-dt');
+         callCovidApi('TT', '#updatedTime', '#table-body', '#rRate', '#mRate');
+		 computeOverallRecoRate('#table-body-reco');
       </script>
 	  
       <!-- Footer menu -->
@@ -93,8 +82,8 @@
             <div class="navbar-header footer-prop">
                <div class="btn-group btn-group-justified ">
 			      <a href="./index.html" class="btn btn-secondary footer-button">India<br/></a>
-                  <a href="./state_tn.html" class="btn  btn-secondary footer-button">TN</a>
-                  <a href="./state_kl.html" class="btn active active-button">KL</a>
+                  <a href="./state_tn.html" class="btn btn-secondary footer-button">TN</a>
+                  <a href="./state_kl.html" class="btn btn-secondary footer-button">KL</a>
                   <a href="./state_ka.html" class="btn btn-secondary footer-button">KA</a>
                   <a href="./state_ap.html" class="btn btn-secondary footer-button">AP</a>
                   <a href="./state_tg.html" class="btn btn-secondary footer-button">TS</a>
