--- a/state_tn.html
+++ b/state_tn.html
@@ -33,10 +33,15 @@
       <nav class="navbar navbar-inverse navbar-fixed-top">
          <div class="container-fluid">
             <div class="navbar-header header-prop">
-               <a class="navbar-brand" href="./index.html">Covid'19 +ve cases</a>
+               <div class="btn-group btn-group-justified ">
+                  <a href="./index.html" class="btn btn-secondary header-button">Covid'19<br>India</a>
+                  <a href="./recovery.html" class="btn btn-secondary header-button">Recovery<br>Rate</a>
+                  <a href="./mortality.html" class="btn btn-secondary header-button">Mortality<br>Rate</a>
+               </div>
             </div>
          </div>
       </nav>
+	  
       <div id="section1" class="container-fluid main-class">
          <h2>TamilNadu</h2>
          <div class="value-box">
